Extract code from downloaders to make more general version in commands